Hook up exposure details to tests